// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`S3 bucket ARN 1`] = `
{
  "Mappings": {
    "DefaultCrNodeVersionMap": {
      "af-south-1": {
        "value": "nodejs16.x",
      },
      "ap-east-1": {
        "value": "nodejs16.x",
      },
      "ap-northeast-1": {
        "value": "nodejs16.x",
      },
      "ap-northeast-2": {
        "value": "nodejs16.x",
      },
      "ap-northeast-3": {
        "value": "nodejs16.x",
      },
      "ap-south-1": {
        "value": "nodejs16.x",
      },
      "ap-south-2": {
        "value": "nodejs16.x",
      },
      "ap-southeast-1": {
        "value": "nodejs16.x",
      },
      "ap-southeast-2": {
        "value": "nodejs16.x",
      },
      "ap-southeast-3": {
        "value": "nodejs16.x",
      },
      "ca-central-1": {
        "value": "nodejs16.x",
      },
      "cn-north-1": {
        "value": "nodejs16.x",
      },
      "cn-northwest-1": {
        "value": "nodejs16.x",
      },
      "eu-central-1": {
        "value": "nodejs16.x",
      },
      "eu-central-2": {
        "value": "nodejs16.x",
      },
      "eu-north-1": {
        "value": "nodejs16.x",
      },
      "eu-south-1": {
        "value": "nodejs16.x",
      },
      "eu-south-2": {
        "value": "nodejs16.x",
      },
      "eu-west-1": {
        "value": "nodejs16.x",
      },
      "eu-west-2": {
        "value": "nodejs16.x",
      },
      "eu-west-3": {
        "value": "nodejs16.x",
      },
      "me-central-1": {
        "value": "nodejs16.x",
      },
      "me-south-1": {
        "value": "nodejs16.x",
      },
      "sa-east-1": {
        "value": "nodejs16.x",
      },
      "us-east-1": {
        "value": "nodejs16.x",
      },
      "us-east-2": {
        "value": "nodejs16.x",
      },
      "us-gov-east-1": {
        "value": "nodejs16.x",
      },
      "us-gov-west-1": {
        "value": "nodejs16.x",
      },
      "us-iso-east-1": {
        "value": "nodejs14.x",
      },
      "us-iso-west-1": {
        "value": "nodejs14.x",
      },
      "us-isob-east-1": {
        "value": "nodejs14.x",
      },
      "us-west-1": {
        "value": "nodejs16.x",
      },
      "us-west-2": {
        "value": "nodejs16.x",
      },
    },
  },
  "Outputs": {
    "S3BucketArn": {
      "Value": {
        "Fn::GetAtt": [
          "RepoDescribeDomainBFB922C1",
          "domain.s3BucketArn",
        ],
      },
    },
  },
  "Parameters": Anything,
  "Resources": {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": {
      "DependsOn": [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Anything,
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": {
      "Properties": Anything,
      "Type": "AWS::IAM::Role",
    },
    "Repo": Anything,
    "RepoDescribeDomainBFB922C1": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "RepoDescribeDomainCustomResourcePolicy66761D14",
      ],
      "Properties": {
        "Create": {
          "Fn::Join": [
            "",
            [
              "{"service":"CodeArtifact","action":"describeDomain","parameters":{"domain":"",
              {
                "Fn::GetAtt": [
                  "Repo",
                  "DomainName",
                ],
              },
              "","domainOwner":"",
              {
                "Fn::GetAtt": [
                  "Repo",
                  "DomainOwner",
                ],
              },
              ""},"physicalResourceId":{"responsePath":"domain.s3BucketArn"}}",
            ],
          ],
        },
        "InstallLatestAwsSdk": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
      },
      "Type": "Custom::CoreArtifactDomainDescription",
      "UpdateReplacePolicy": "Delete",
    },
    "RepoDescribeDomainCustomResourcePolicy66761D14": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "codeartifact:DescribeDomain",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "RepoDomainC79FB030",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RepoDescribeDomainCustomResourcePolicy66761D14",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RepoDomainC79FB030": Anything,
    "RepoPublishing9FE3D602": {
      "Properties": {
        "Description": "Publishing repository",
        "DomainName": {
          "Fn::GetAtt": [
            "RepoDomainC79FB030",
            "Name",
          ],
        },
        "RepositoryName": "c824e6f26ac4b798fe181c4568a8a55d69111ad893-publish-overlay",
      },
      "Type": "AWS::CodeArtifact::Repository",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`npm repository endpoint 1`] = `
{
  "Mappings": {
    "DefaultCrNodeVersionMap": {
      "af-south-1": {
        "value": "nodejs16.x",
      },
      "ap-east-1": {
        "value": "nodejs16.x",
      },
      "ap-northeast-1": {
        "value": "nodejs16.x",
      },
      "ap-northeast-2": {
        "value": "nodejs16.x",
      },
      "ap-northeast-3": {
        "value": "nodejs16.x",
      },
      "ap-south-1": {
        "value": "nodejs16.x",
      },
      "ap-south-2": {
        "value": "nodejs16.x",
      },
      "ap-southeast-1": {
        "value": "nodejs16.x",
      },
      "ap-southeast-2": {
        "value": "nodejs16.x",
      },
      "ap-southeast-3": {
        "value": "nodejs16.x",
      },
      "ca-central-1": {
        "value": "nodejs16.x",
      },
      "cn-north-1": {
        "value": "nodejs16.x",
      },
      "cn-northwest-1": {
        "value": "nodejs16.x",
      },
      "eu-central-1": {
        "value": "nodejs16.x",
      },
      "eu-central-2": {
        "value": "nodejs16.x",
      },
      "eu-north-1": {
        "value": "nodejs16.x",
      },
      "eu-south-1": {
        "value": "nodejs16.x",
      },
      "eu-south-2": {
        "value": "nodejs16.x",
      },
      "eu-west-1": {
        "value": "nodejs16.x",
      },
      "eu-west-2": {
        "value": "nodejs16.x",
      },
      "eu-west-3": {
        "value": "nodejs16.x",
      },
      "me-central-1": {
        "value": "nodejs16.x",
      },
      "me-south-1": {
        "value": "nodejs16.x",
      },
      "sa-east-1": {
        "value": "nodejs16.x",
      },
      "us-east-1": {
        "value": "nodejs16.x",
      },
      "us-east-2": {
        "value": "nodejs16.x",
      },
      "us-gov-east-1": {
        "value": "nodejs16.x",
      },
      "us-gov-west-1": {
        "value": "nodejs16.x",
      },
      "us-iso-east-1": {
        "value": "nodejs14.x",
      },
      "us-iso-west-1": {
        "value": "nodejs14.x",
      },
      "us-isob-east-1": {
        "value": "nodejs14.x",
      },
      "us-west-1": {
        "value": "nodejs16.x",
      },
      "us-west-2": {
        "value": "nodejs16.x",
      },
    },
  },
  "Outputs": {
    "NpmRepositoryEndpoint": {
      "Value": {
        "Fn::GetAtt": [
          "RepoGetEndpoint5034567A",
          "repositoryEndpoint",
        ],
      },
    },
  },
  "Parameters": Anything,
  "Resources": {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": {
      "DependsOn": [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Anything,
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": {
      "Properties": Anything,
      "Type": "AWS::IAM::Role",
    },
    "Repo": Anything,
    "RepoDomainC79FB030": Anything,
    "RepoGetEndpoint5034567A": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "RepoGetEndpointCustomResourcePolicy40405D0D",
      ],
      "Properties": {
        "Create": {
          "Fn::Join": [
            "",
            [
              "{"service":"CodeArtifact","action":"getRepositoryEndpoint","parameters":{"domain":"",
              {
                "Fn::GetAtt": [
                  "Repo",
                  "DomainName",
                ],
              },
              "","domainOwner":"",
              {
                "Fn::GetAtt": [
                  "Repo",
                  "DomainOwner",
                ],
              },
              "","format":"npm","repository":"",
              {
                "Fn::GetAtt": [
                  "Repo",
                  "Name",
                ],
              },
              ""},"physicalResourceId":{"responsePath":"repositoryEndpoint"}}",
            ],
          ],
        },
        "InstallLatestAwsSdk": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": {
          "Fn::Join": [
            "",
            [
              "{"service":"CodeArtifact","action":"getRepositoryEndpoint","parameters":{"domain":"",
              {
                "Fn::GetAtt": [
                  "Repo",
                  "DomainName",
                ],
              },
              "","domainOwner":"",
              {
                "Fn::GetAtt": [
                  "Repo",
                  "DomainOwner",
                ],
              },
              "","format":"npm","repository":"",
              {
                "Fn::GetAtt": [
                  "Repo",
                  "Name",
                ],
              },
              ""},"physicalResourceId":{"responsePath":"repositoryEndpoint"}}",
            ],
          ],
        },
      },
      "Type": "Custom::CodeArtifactNpmRepositoryEndpoint",
      "UpdateReplacePolicy": "Delete",
    },
    "RepoGetEndpointCustomResourcePolicy40405D0D": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "codeartifact:GetRepositoryEndpoint",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "Repo",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RepoGetEndpointCustomResourcePolicy40405D0D",
        "Roles": [
          {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RepoPublishing9FE3D602": {
      "Properties": {
        "Description": "Publishing repository",
        "DomainName": {
          "Fn::GetAtt": [
            "RepoDomainC79FB030",
            "Name",
          ],
        },
        "RepositoryName": "c824e6f26ac4b798fe181c4568a8a55d69111ad893-publish-overlay",
      },
      "Type": "AWS::CodeArtifact::Repository",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
